# CxAssetManagementLibrary

./: .gitignore  AGENTS.md  README.md  alembic.ini  clean_workspace.bat  pyproject.toml  requirements-desktop.txt  run_desktop.py  start_backend.bat  start_desktop.bat  start_frontend.bat  start_project.bat  stop_project.bat
.claude/skills/my-first-skill/: .openskills.json
CXA_Library/Lighting/HDRI/ROOM_HDRI/Home_Pierre_Bathroom/.vrayThumbs/: canada_montreal_home_pierre_bathroom.EXR
CXA_Library/Lighting/HDRI/ROOM_HDRI/Micah_Loft/.mayaSwatches/: canada_montreal_micah_loft.exr.swatch  (+1 more)
CXA_Rely/: get_project_path.py
CXA_Script/: CXDataFile.py  CXMainFunctionArea.py  CXMainWin.py  CXSampInfoWin.py
CXA_UI/: Icon_Widget.bat  Icon_Widget.ui  Main_Win.bat  Main_Win.ui  SampInfo_Win.bat  SampInfo_Win.ui  Title.bat  Title.ui
CXA_UIPY/: Icon_Widget.py  Main_Win.py  SampInfo_Win.py  Title.py
alembic/: env.py
alembic/versions/: 20260426_0001_init_schema.py  20260426_0002_user_favorites.py
docs/: ANTD_MIGRATION_CHECKLIST.md  DEPLOY.md  PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  glassTheme.js  index.css
src/PySide2/: QtCore.py  QtGui.py  QtSvg.py  QtWidgets.py  __init__.py
src/cxasset_api/: config.py  db.py  main.py  models.py  sync_cli.py  sync_worker.py
src/cxasset_desktop/: __init__.py  api_client.py  main.py
src/cxasset_desktop_app/: __init__.py  client.py  dayu.py  main.py
src/cxasset_desktop_app/ui/: __init__.py  main_window.py
test_file/: icon.psd  test.py  test111.py  test_nowrim.py
(+1 files in other folders)
